tests/ui/feature-gates/feature-gate-unnamed_fields.stderr
error[E0658]: unnamed fields are not yet fully implemented
  --> $DIR/feature-gate-unnamed_fields.rs:4:5
   |
LL |     _: union {
   |     ^
   |
   = note: see issue #49804 <https://github.com/rust-lang/rust/issues/49804> for more information
   = help: add `#![feature(unnamed_fields)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: unnamed fields are not yet fully implemented
  --> $DIR/feature-gate-unnamed_fields.rs:4:8
   |
LL |       _: union {
   |  ________^
LL | |
LL | |         bar: u8,
LL | |         baz: u16
LL | |     }
   | |_____^
   |
   = note: see issue #49804 <https://github.com/rust-lang/rust/issues/49804> for more information
   = help: add `#![feature(unnamed_fields)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: unnamed fields are not yet fully implemented
  --> $DIR/feature-gate-unnamed_fields.rs:14:5
   |
LL |     _: struct {
   |     ^
   |
   = note: see issue #49804 <https://github.com/rust-lang/rust/issues/49804> for more information
   = help: add `#![feature(unnamed_fields)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: unnamed fields are not yet fully implemented
  --> $DIR/feature-gate-unnamed_fields.rs:14:8
   |
LL |       _: struct {
   |  ________^
LL | |
LL | |         foobaz: u8,
LL | |         barbaz: u16
LL | |     }
   | |_____^
   |
   = note: see issue #49804 <https://github.com/rust-lang/rust/issues/49804> for more information
   = help: add `#![feature(unnamed_fields)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: unnamed fields are not yet fully implemented
  --> $DIR/feature-gate-unnamed_fields.rs:26:5
   |
LL |     _: S
   |     ^
   |
   = note: see issue #49804 <https://github.com/rust-lang/rust/issues/49804> for more information
   = help: add `#![feature(unnamed_fields)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0658`.
